--- a/recordit/templates/auth/login.html
+++ b/recordit/templates/auth/login.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
-
+{% from 'macros.html' import render_breadcrumb_item %}
 
 {% block title %}Login{% endblock %}
 
 
 {% block breadcrumb %}
-<div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg-01.jpg') }}"
+<div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
     data-black-overlay="4">
     <div class="container">
         <div class="in-breadcrumb">
@@ -13,9 +13,7 @@
                 <div class="col">
                     <h3>Login</h3>
                     <ul class="breadcrumb-list">
-                        <li class="breadcrumb-item">
-                            <a href="{{ url_for('front.index') }}">Home</a>
-                        </li>
+                        {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
                         <li class="breadcrumb-item active">
                             Login
                         </li>
