--- a/recordit/templates/errors.html
+++ b/recordit/templates/errors.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
+{% from 'macros.html' import render_breadcrumb_item %}
 
 {% block title %}Error {{ code }}{% endblock %}
 
 {% block breadcrumb %}
-<div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg-01.jpg') }}"
+<div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
     data-black-overlay="4">
     <div class="container">
         <div class="in-breadcrumb">
@@ -11,9 +12,7 @@
                 <div class="col">
                     <h3>Error {{ code }}</h3>
                     <ul class="breadcrumb-list">
-                        <li class="breadcrumb-item">
-                            <a href="{{ url_for('front.index') }}">Home</a>
-                        </li>
+                        {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
                         <li class="breadcrumb-item active">
                             Error {{ code }}
                         </li>
@@ -34,7 +33,7 @@
                     <h1>{{ code }}</h1>
                     <h4>{{ info }}</h4>
                     <p>
-                        {{ _('Sorry, the page you are looking for does not exist, have been removed, name changed or is temporarity unavailable.') }}
+                        {{ _('Sorry,<br /> the page you are looking for does not exist,<br /> have been removed, name changed or is temporarity unavailable.') }}
                     </p>
                     <a href="{{ url_for('front.index') }}" class="home-bacck-button">
                         {{ _('Back to home page') }}
