--- a/recordit/templates/front/about.html
+++ b/recordit/templates/front/about.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
-{% from 'macros.html' import single_counter %}
+{% from 'macros.html' import render_counter %}
+{% from 'macros.html' import render_breadcrumb_item %}
 
 
 {% block title %}About{% endblock %}
 
 
 {% block breadcrumb %}
-<div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg-01.jpg') }}"
+<div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
     data-black-overlay="4">
     <div class="container">
         <div class="in-breadcrumb">
@@ -14,9 +15,7 @@
                 <div class="col">
                     <h3>About Us</h3>
                     <ul class="breadcrumb-list">
-                        <li class="breadcrumb-item">
-                            <a href="{{ url_for('front.index') }}">Home</a>
-                        </li>
+                        {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
                         <li class="breadcrumb-item active">
                             About Us
                         </li>
@@ -66,10 +65,10 @@
                 <div class="row">
                     <div class="col-lg-10 ml-auto mr-auto">
                         <div class="row">
-                            {{ single_counter('Teachers', 50) }}
-                            {{ single_counter('Students', 50) }}
-                            {{ single_counter('Courses', 50) }}
-                            {{ single_counter('Reports', 50) }}
+                            {{ render_counter('Teachers', 50) }}
+                            {{ render_counter('Students', 50) }}
+                            {{ render_counter('Courses', 50) }}
+                            {{ render_counter('Reports', 50) }}
                         </div>
                     </div>
                 </div>
