--- a/recordit/templates/admin/change_password.html
+++ b/recordit/templates/admin/change_password.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
+{% from 'bootstrap/form.html' import render_form %}
 {% from 'macros/macros.html' import render_breadcrumb_item %}
 
-{% block title %}Error {{ code }}{% endblock %}
+
+{% block title %}Edit Profile{% endblock %}
+
 
 {% block breadcrumb %}
 <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
@@ -10,11 +13,13 @@
         <div class="in-breadcrumb">
             <div class="row">
                 <div class="col">
-                    <h3>Error {{ code }}</h3>
+                    <h3>{{ _('Change Password') }}</h3>
                     <ul class="breadcrumb-list">
                         {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
+                        {{ render_breadcrumb_item(endpoint='admin.index', name='Dashboard') }}
+                        {{ render_breadcrumb_item(endpoint='admin.manage_user', name='Manage User') }}
                         <li class="breadcrumb-item active">
-                            Error {{ code }}
+                            Change Password
                         </li>
                     </ul>
                 </div>
@@ -24,23 +29,28 @@
 </div>
 {% endblock breadcrumb %}
 
+
 {% block content %}
-<main class="page-content section-ptb">
+<div class="page-content section-ptb">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 ml-auto mr-auto text-center">
-                <div class="search-error-wrapper">
-                    <h1>{{ code }}</h1>
-                    <h4>{{ info }}</h4>
-                    <p>
-                        {{ _('Sorry,<br /> the page you are looking for does not exist,<br /> have been removed, name changed or is temporarity unavailable.') }}
-                    </p>
-                    <a href="{{ url_for('front.index') }}" class="home-bacck-button">
-                        {{ _('Back to home page') }}
-                    </a>
+            <div class="col-12">
+                <div class="account-dashboard">
+                    <div class="tab-content dashboard-content">
+                        <div class="tab-pane active">
+                            <h3>{{ _('Change Password') }}</h3>
+                            <p>{{ render_form(form) }}</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</main>
+</div>
 {% endblock content %}
+
+
+{% block scripts %}
+{{ super() }}
+{{ ckeditor.load() }}
+{% endblock %}
