--- a/recordit/templates/front/index.html
+++ b/recordit/templates/front/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
-{% from 'macros.html' import render_slide %}
-{% from 'macros.html' import render_cours %}
+{% from 'macros/macros.html' import render_slide %}
+{% from 'macros/macros.html' import render_cours %}
 
 
 {% block content %}
