--- a/recordit/templates/user/settings/change_password.html
+++ b/recordit/templates/user/settings/change_password.html
@@ -1,6 +1,6 @@
 {% extends 'user/settings/base.html' %}
 {% from 'bootstrap/form.html' import render_form %}
-{% from 'macros.html' import render_breadcrumb_item %}
+{% from 'macros/macros.html' import render_breadcrumb_item %}
 
 
 {% block breadcrumb %}
