--- a/recordit/templates/admin/index.html
+++ b/recordit/templates/admin/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% from 'macros.html' import render_breadcrumb_item %}
+{% from 'macros/macros.html' import render_breadcrumb_item %}
+
 
 {% block title %}Dashboard{% endblock %}
 
@@ -27,79 +28,122 @@
 
 
 {% block content %}
-<div class="section-ptb">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card border-secondary mb-3">
-                    <div class="card-header">
-                        <span class="oi oi-people"></span> Users
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Total: {{ user_count|default('0') }}</h4>
-                        <p class="card-text">Locked: {{ locked_user_count|default('0') }}
-                            Blocked: {{ blocked_user_count|default('0') }}</p>
-                        <a class="btn btn-primary text-white" href="#">Manage</a>
-                        <a class="btn btn-secondary text-white" href="#">View
-                            Locked</a>
-                        <a class="btn btn-secondary text-white" href="#">View
-                            Blocked</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card border-primary mb-3">
-                    <div class="card-header">
-                        <span class="oi oi-image"></span> Courses
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Total: {{ photo_count|default('0') }}</h4>
-                        <p class="card-text">Reported: {{ reported_photo_count|default('0') }}</p>
-                        <a class="btn btn-primary text-white" href="#">Manage</a>
+<main class="page-content">
+    <div class="most-popular-courses-area section-pb section-pt-90">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="single-popular-courses mt--30">
+                        <div class="popular-courses-contnet">
+                            <h5>
+                                <i class="fas fa-chalkboard-teacher"></i>
+                                Courses
+                            </h5>
+                            <div class="post_meta">
+                                <ul>
+                                    <li>Total
+                                        <span class="badge badge-light">{{ course_count|default(0) }}</span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <p>{{ lipsum(1, min=5, max=10) }}</p>
+                            <div class="button-block">
+                                <a href="{{ url_for('admin.manage_course') }}" class="botton-border">{{ _('Manage') }}</a>
+                                <a href="{{ url_for('admin.add_course') }}" class="botton-border">{{ _('Add') }}</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card border-danger mb-3">
-                    <div class="card-header">
-                        <span class="oi oi-comment-square"></span> Reports
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Total: {{ comment_count|default('0') }}</h4>
-                        <p class="card-text">Reported: {{ reported_comments_count|default('0') }}</p>
-                        <a class="btn btn-primary text-white" href="#">Manage</a>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="single-popular-courses mt--30">
+                        <div class="popular-courses-contnet">
+                            <h5>
+                                <i class="fas fa-users"></i>
+                                {{ _('Users') }}
+                            </h5>
+                            <div class="post_meta">
+                                <ul>
+                                    <li>
+                                        <a href="{{ url_for('admin.manage_user', filter='all') }}">
+                                            Total
+                                        </a>
+                                        <span class="badge badge-light">{{ user_count|default(0) }}</span>
+                                    </li>
+                                    <li>
+                                        <a href="{{ url_for('admin.manage_user', filter='student') }}">
+                                            Students
+                                        </a>
+                                        <span class="badge badge-light">{{ student_count|default(0) }}</span>
+                                    </li>
+                                    <li>
+                                        <a href="{{ url_for('admin.manage_user', filter='teacher') }}">
+                                            Teachers
+                                        </a>
+                                        <span class="badge badge-light">{{ teacher_count|default(0) }}</span>
+                                    </li>
+                                    <li>
+                                        <a href="{{ url_for('admin.manage_user', filter='administrator') }}">
+                                            Administrators
+                                        </a>
+                                        <span class="badge badge-light">{{ admin_count|default(0) }}</span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <p>{{ lipsum(1, min=5, max=10) }}</p>
+                            <div class="button-block">
+                                <a href="{{ url_for('admin.manage_user', filter='all') }}" class="botton-border">
+                                    {{ _('Manage') }}
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card border-success mb-3">
-                    <div class="card-header">
-                        <span class="oi oi-tag"></span> Record Tables
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Total: {{ tag_count|default('0') }}</h4>
-                        <p class="card-text">&nbsp;</p>
-                        <a class="btn btn-primary text-white" href="#">Manage</a>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="single-popular-courses mt--30">
+                        <div class="popular-courses-contnet">
+                            <h5>
+                                <i class="far fa-registered"></i>
+                                {{ _('Register') }}
+                            </h5>
+                            <p>{{ lipsum(1, min=5, max=10) }}</p>
+                            <div class="button-block">
+                                <a href="{{ url_for('admin.register_student') }}" class="botton-border">
+                                    {{ _('Student') }}
+                                </a>
+                                <a href="{{ url_for('admin.register_teacher') }}" class="botton-border">
+                                    {{ _('Teacher') }}
+                                </a>
+                                <a href="{{ url_for('admin.register_administrator') }}" class="botton-border">
+                                    {{ _('Administrator') }}
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card border-info mb-3">
-                    <div class="card-header">
-                        <span class="oi oi-comment-square"></span> Logs
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Total: {{ comment_count|default('0') }}</h4>
-                        <p class="card-text">Reported: {{ reported_comments_count|default('0') }}</p>
-                        <a class="btn btn-primary text-white" href="#">Manage</a>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="single-popular-courses mt--30">
+                        <div class="popular-courses-contnet">
+                            <h5>
+                                <i class="fas fa-file-medical-alt"></i>
+                                Logs
+                            </h5>
+                            <div class="post_meta">
+                                <ul>
+                                    <li>Total
+                                        <span class="badge badge-light">{{ log_count|default(0) }}</span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <p>{{ lipsum(1, min=5, max=10) }}</p>
+                            <div class="button-block">
+                                <a class="botton-border" href="#">{{ _('System logs') }}</a>
+                                <a class="botton-border" href="#">{{ _('User logs') }}</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</main>
 {% endblock content %}
