--- a/recordit/templates/auth/login.html
+++ b/recordit/templates/auth/login.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
-{% from 'macros.html' import render_breadcrumb_item %}
+{% from 'macros/macros.html' import render_breadcrumb_item %}
+{% from 'bootstrap/form.html' import render_form %}
+
 
 {% block title %}Login{% endblock %}
 
@@ -34,27 +36,9 @@
                 <div class="col-lg-7 col-md-12 ml-auto mr-auto">
                     <div class="login-register-wrapper">
                         <div class="tab-content">
-                            <h3 class="text-center">Login</h3>
                             <div class="login-form-container">
                                 <div class="login-register-form">
-                                    <form action="#" method="post">
-                                        {{ form.csrf_token() }}
-                                        <div class="login-input-box">
-                                            {{ form.username() }}
-                                            {{ form.password() }}
-                                        </div>
-                                        <div class="button-box">
-                                            <div class="login-toggle-btn">
-                                                {{ form.remember_me() }}
-                                                {{ form.remember_me.label }}
-                                            </div>
-                                            <div class="button-box">
-                                                <button class="login-btn btn" type="submit">
-                                                    <span>{{ _('Login') }}</span>
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </form>
+                                    {{ render_form(form) }}
                                 </div>
                             </div>
                         </div>
