--- a/recordit/templates/user/index.html
+++ b/recordit/templates/user/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% from 'macros.html' import render_breadcrumb_item %}
+{% from 'macros/macros.html' import render_breadcrumb_item %}
 
 {% block title %}Home{% endblock %}
 
