--- a/recordit/templates/user/settings/base.html
+++ b/recordit/templates/user/settings/base.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% from 'macros.html' import render_nav_item %}
+{% from 'macros/macros.html' import render_nav_item %}
 
 
 {% block title %}Settings{% endblock %}
