--- a/recordit/templates/user/settings/edit_profile.html
+++ b/recordit/templates/user/settings/edit_profile.html
@@ -1,6 +1,6 @@
 {% extends 'user/settings/base.html' %}
 {% from 'bootstrap/form.html' import render_form %}
-{% from 'macros.html' import render_breadcrumb_item %}
+{% from 'macros/macros.html' import render_breadcrumb_item %}
 
 
 {% block breadcrumb %}
@@ -34,6 +34,6 @@
 {% endblock %}
 
 {% block scripts %}
-    {{ super() }}
-    {{ ckeditor.load() }}
+{{ super() }}
+{{ ckeditor.load() }}
 {% endblock %}
